--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,8 +10,15 @@
 
   <body class="<%= controller.controller_name %>">
     <div id="banner">
+    <%= form_tag store_index_path, class: 'locale' do %>
+    <%= select_tag 'set_locale',
+     options_for_select(LANGUAGES, I18n.locale.to_s), 
+     onchange: 'this.form.submit()' %>
+    <%= submit_tag 'submit' %>
+    <%= javascript_tag "$('.locale input').hide()" %>
+    <% end %>
     <%= image_tag 'logo.svg', alt: 'The Pragmatic Bookshelf' %> 
-    <span class="title"><%= @page_title %></span>
+    <span class="title"><h3><%= @page_title %></h3></span>
   </div>
 
   <div id="columns">
