--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,13 +2,12 @@
 <html>
   <head>
     <title>Pragprog Books Online Store</title>
-    <%= stylesheet_link_tag "application", media: "all",
-    "data-turbolinks-track" => 'reload' %>
-    <%= javascript_include_tag "application", "data-turbolinks-track" => 'reload' %> 
+    <%= stylesheet_link_tag "application", media: "all", "data-turbolinks-track": 'reload' %>
+    <%= javascript_include_tag "application", "data-turbolinks-track": 'reload' %>
     <%= csrf_meta_tags %>
   </head>
 
-  <body class="<%= controller.controller_name %>">
+   <body class="<%= controller.controller_name %>">
     <div id="banner">
     <%= form_tag store_index_path, class: 'locale' do %>
     <%= select_tag 'set_locale',
@@ -50,9 +49,11 @@
       <% end %>
 
     </div>
-    <div id="main"> 
-    <%= yield %>
-    </div>
+
+    <main class='<%= controller.controller_name %>'>
+      <%= yield %>
+    </main>
+
   </div>
 </body>
 </html>
