--- a/app/views/store/index.html.erb
+++ b/app/views/store/index.html.erb
@@ -1,22 +1,23 @@
-<p id="notice"><%= notice %></p>
-
-<h1><%= t('.title_html') %></h1>
-
-<% cache @products do %>
-    <% @products.each do |product| %> 
-        <% cache product do %>
-            <div class="entry">
-                <%= link_to image_tag(product.image_url, {:border => "0", :title => "Push it into cart!"}),
-                      line_items_path(:product_id => product), {:method => :post} %>
-                <h3><%= product.title %></h3>
-                <%= sanitize(product.description) %> 
-                <div class="price_line">
-                    <span class="price"><%= number_to_currency(product.price) %></span>
-                    <%= button_to t('.add_html'),
-                        line_items_path(product_id: product, locale: I18n.locale),
-                        remote: true %>
-                </div>
-            </div>
-        <% end %>
-    <% end %>
-<% end %>
+<​% if notice %>
+​ 	  <aside id=​"notice"​>​<​%= notice %></aside>
+<​% end %>
+​ 
+<h1>Your Pragmatic Catalog</h1>
+​ 
+​<ul class=​"catalog"​>
+  ​ 	  ​<​% @products.each do |product| %>
+  <li>
+    ​  ​<​%= image_tag(product.image_url) %>
+    ​  <h2>​<​%= product.title %></h2>
+    ​  <p>
+    ​  ​<​%= sanitize(product.description) %>
+    ​  </p>
+    ​ 
+    <div class=​"price"​>
+      ​  ​<​%= product.price %>
+    </div>
+    ​ 
+  </li>
+  ​ <​% end %>
+  ​ 
+</ul>
