--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,59 +1,32 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>Pragprog Books Online Store</title>
-    <%= stylesheet_link_tag "application", media: "all", "data-turbolinks-track": 'reload' %>
-    <%= javascript_include_tag "application", "data-turbolinks-track": 'reload' %>
-    <%= csrf_meta_tags %>
-  </head>
+<head>
+  <title>Pragprog Books Online Store</title>
+  <%= csrf_meta_tags %>
 
-   <body class="<%= controller.controller_name %>">
-    <div id="banner">
-    <%= form_tag store_index_path, class: 'locale' do %>
-    <%= select_tag 'set_locale',
-     options_for_select(LANGUAGES, I18n.locale.to_s), 
-     onchange: 'this.form.submit()' %>
-    <%= submit_tag 'submit' %>
-    <%= javascript_tag "$('.locale input').hide()" %>
-    <% end %>
-    <%= image_tag 'logo.svg', alt: 'The Pragmatic Bookshelf' %> 
-    <span class="title"><h3><%= @page_title %></h3></span>
-  </div>
+  <%= stylesheet_link_tag 'application', media: 'all',
+                          'data-turbolinks-track': 'reload' %>
+  <%= javascript_include_tag 'application',
+                             'data-turbolinks-track': 'reload' %>
+</head>
 
-  <div id="columns">
-    <div id="side"> 
-      <div id="cart">
-
-        <% if @cart %>
-          <%= hidden_div_if(@cart.line_items.empty?, id: 'cart') do %>
-            <%= render @cart %> 
-          <% end %>
-        <% end %>
-              
-      </div>
-
-      <ul>
-        <li><a href="http://www...."><%= t('.home') %></a></li>
-        <li><a href="http://www..../faq"><%= t('.questions') %></a></li>
-        <li><a href="http://www..../news"><%= t('.news') %></a></li>
-        <li><a href="http://www..../contact"><%= t('.contact') %></a></li>
-      </ul> 
-
-      <% if session[:user_id] %>
-        <ul>
-          <li><%= link_to 'Orders', orders_path %></li> 
-          <li><%= link_to 'Products', products_path %></li> 
-          <li><%= link_to 'Users', users_path %></li>
-        </ul>
-        <%= button_to 'Logout', logout_path, method: :delete %>
-      <% end %>
-
-    </div>
-
-    <main class='<%= controller.controller_name %>'>
-      <%= yield %>
-    </main>
-
-  </div>
+<body>
+<header class="main">
+  <%= image_tag 'logo.svg', alt: 'The Pragmatic Bookshelf' %>
+  <h1><%= @page_title %></h1>
+</header>
+<section class="content">
+  <nav class="side_nav">
+    <ul>
+      <li><a href="/">Home</a></li>
+      <li><a href="/questions">Questions</a></li>
+      <li><a href="/news">News</a></li>
+      <li><a href="/contact">Contact</a></li>
+    </ul>
+  </nav>
+  <main class='<%= controller.controller_name %>'>
+    <%= yield %>
+  </main>
+</section>
 </body>
 </html>
