--- a/app/views/store/index.html.erb
+++ b/app/views/store/index.html.erb
@@ -14,7 +14,7 @@
     ​  </p>
     ​ 
     <div class=​"price"​>
-      ​  ​<​%= product.price %>
+      ​  ​<​%= number_to_currency(product.price) %>
     </div>
     ​ 
   </li>
